--- a/Become a Pokemon Master/.vscode/settings.json
+++ b/Become a Pokemon Master/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\MinicondaFiles\\python.exe"
+    "python.pythonPath": "C:\\Users\\Armaan Barak\\miniconda3\\python.exe"
 }
